# asio_chat

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  client.cpp  common.hpp  compile_commands.json  daytime2.cpp  daytime3.cpp  main.cpp  main2.cpp  message.hpp  message_parser.hpp  server.cpp  test.cpp
client/: client.cpp  client.hpp  client_main.cpp
server/: auth-manager.hpp  command.cpp  command.h  message_parser.hpp  participant.hpp  room-mgr.cc  room-mgr.h  room.cpp  room.hpp  server.cpp  server.hpp  server_main.cpp  session.cpp  session.hpp
tutors/: daytime1.cpp  daytime3.cpp  daytime4.cpp
